# svgflow-software-dev

./: .gitignore  bun.lockb  capacitor.config.ts  ionic.config.json  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/editor/: canvas.tsx  code-panel.tsx  properties-panel.tsx  settings-panel.tsx
src/components/layout/: sidebar.tsx
src/components/ui/: modal.tsx
src/lib/: file-system.ts
src/store/: editor-store.ts
